// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`生成 interface 测试 OpenAPI-2.0生成 interface 测试: OpenAPI-2.0生成 interface 测试 1`] = `
"/**
 * @description uploads an image
 * @summary Request data types
 * @url [ POST ] /v2/pet/{petId}/uploadImage
 */
export interface 安逗和黑仔 {
code: number
type: string
message: string
}"
`;

exports[`生成 interface 测试 OpenAPI-3.0生成 interface 测试: OpenAPI-3.0生成 interface 测试 1`] = `
"/**
 * @description Place an order for a pet、Place a new order in the store
 * @summary Response data types
 * @url [ POST ] /api/v3/store/order
 */
export interface ApiV3StoreOrderResponseByPost {
id?: string
petId?: string
quantity?: number
shipDate?: string
// Order Status
status?: 'placed' | 'approved' | 'delivered'
complete?: boolean
}"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - dropComment属性测试 1`] = `"export type V2StoreInventoryRequestByGet =any;"`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - name属性测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Request data types
 * @url [ GET ] /v2/store/inventory
 */
export type 自定义名称 =any;"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - onlyBody属性测试 1`] = `
"{
// 手机号
phone: string
// 账户名
username: string
}"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - prefix属性测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Request data types
 * @url [ GET ] /v2/store/inventory
 */
type V2StoreInventoryRequestByGet =any;"
`;

exports[`生成 interface 测试 open-api-3.0-dot.json: open-api-3.0-dot.json 1`] = `
"/**
 * @description 兼容非标准的dot参数形式
 * @summary Request data types
 * @url [ GET ] /compatible-error-specification-dot-query-param
 */
export interface CompatibleErrorSpecificationDotQueryParamRequestByGet {
// ID集合
ids?: 
Array<string>
dept?: 
{
// 创建者1号
deptCreateBy1?: string
// 创建者2号
deptCreateBy2?: string
}
roles?: 
Array<{
// 角色创建者1号
roleCreateBy1?: string
// 角色创建时间
roleCreateTime?: string
}>
// 有分页参数的话就加,根据你的实际查询参数编写
"有分页参数的话就加,根据你的实际查询参数编写"?: string
}
/**
 * @description 兼容非标准的dot参数形式
 * @summary Request data types
 * @url [ GET ] /compatible-error-specification-dot-query-param
 */
export type CompatibleErrorSpecificationDotQueryParamRequestByGet =any;"
`;

exports[`生成 interface 测试 open-api-响应参数为List: open-api-响应参数为List 1`] = `
"/**
 * @description 响应数据 array
 * @summary Request data types
 * @url [ POST ] /resp-array
 */
export type RespArrayRequestByPost =any;
/**
 * @description 响应数据 array
 * @summary Request data types
 * @url [ POST ] /resp-array
 */
export type RespArrayRequestByPost =Array<{
// 用户名
username: string
}>"
`;
